# voicestick

./: .gitignore  README.md
.github/workflows/: deploy-website.yml  (+1 more)
desktop/windows/: CMakeLists.txt  README.md
desktop/windows/installer/: VoiceStick.wxs  license.rtf  zh-CN.wxl
desktop/windows/resources/: VoiceStick.rc  resource.h
desktop/windows/src/: app_config.cc  app_config.h  asr_client_win.cc  asr_client_win.h  asr_protocol.cc  asr_protocol.h  ble_central_win.cc  ble_central_win.h  ble_protocol.cc  ble_protocol.h  byte_utils.h  debug_audio_recorder.cc  debug_audio_recorder.h  dpi_util.h  firmware_manifest.cc  firmware_manifest.h  firmware_update_dialog.cc  firmware_update_dialog.h  input_injector_win.cc  input_injector_win.h  log.cc  log.h  main.cc  ogg_crc.cc  ogg_crc.h  ogg_opus_muxer.cc  ogg_opus_muxer.h  overlay_window.cc  overlay_window.h  pair_device_dialog.cc  pair_device_dialog.h  settings_dialog.cc  settings_dialog.h  version.h.in  voice_stick_coordinator.cc  voice_stick_coordinator.h  win32_app.cc  win32_app.h
desktop/windows/tests/: core_tests.cc
docs/: release-notes-v0.3.4.md  user-manual.md
firmware/: partitions_m5stickc_plus.csv  sdkconfig.defaults.m5stickc_plus  sdkconfig.defaults.m5stickc_plus.ble_audio_e2e  sdkconfig.defaults.m5stickc_plus.buttondiag  sdkconfig.defaults.m5stickc_plus.selftest  sdkconfig.defaults.stick_s3
firmware/components/voice_board/: CMakeLists.txt  Kconfig
firmware/components/voice_board/boards/m5stickc_plus/: voice_board_m5stickc_plus.c
firmware/components/voice_board/boards/stick_s3/: voice_board_stick_s3.c
firmware/components/voice_board/include/: voice_board.h
scripts/: build-msi.bat  make-dmg.sh  probe_asr_websocket_ping.py  update-appcast.py
website/: README.md  package-lock.json  package.json
(+29 files in other folders)
